feat: ipmlemented specific chat api
