# storage/api-docs/api-docs.json
@@ -582,6 +582,62 @@
                 ]
             }
         },
+        "/api/v1/chats/product/{productId}/agent/{agentId}": {
+            "get": {
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get specific chat for the authenticated tenant related to a specific product and agent",
+                "description": "Get specific chat for the authenticated tenant related to a specific product and agent",
+                "operationId": "getSpecificChat",
+                "parameters": [
+                    {
+                        "name": "productId",
+                        "in": "path",
+                        "description": "ID of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "agentId",
+                        "in": "path",
+                        "description": "ID of the agent",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chat retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Chat retrieved successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Chat"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/products/recommended": {
             "get": {
                 "tags": [
